kubernetes_proxmox/proyectos/legal-recovery/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legal-recovery
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
