kubernetes_proxmox/proyectos/legal-recovery/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legal-recovery-api
  namespace: legal-recovery
spec:
  selector:
    app: legal-recovery-api
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
