kubernetes_proxmox/proyectos/legal-recovery/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legal-recovery-web
  namespace: legal-recovery
spec:
  selector:
    app: legal-recovery-web
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
